<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xmas Stories</string>
    <string name="action_settings">Settings</string>
    <string name="title">Xmas Stories True Or False</string>
    <string name="description">I\'ll tell you 3 stories which are related to 
        Christmas. Not all of them are true. 
        Read all stories and decide which one is true and which one is false.
        At the End, I\'ll give you the Truth about all stories. Have fun! </string>
    <string name="title_first_story">First Story</string>
    <string name="text_first_story">In Sweden, we have a red Christmas Postbox. 
        The hole december kids can mail their Christmas letter to St. Claus by using 
        the red postbox. There\'s a special post office where this mail is send to.
        Every letter is answered by one of Santas helper.</string>
    
    <string name="title_second_story">Second Story</string>
    <string name="text_second_story">This is my dog Maja. 
        Every year, several hours before Christmas, 
        she puts her dog bags on and leaves the house.
        And right before we are starting to open the Christmas presents, she comes back.
        We believe she is one of Santas helper.</string>
    
    <string name="title_third_story">Third Story</string>
    <string name="text_third_story">I did some research to be able to track 
        down my dog when she disappears again. Turns out that I can track her
        down by putting one of my phones in her bag and track her with another one.
        So, next Christmas, I could find out where she is going.</string>
    
    <string name="truth_first_story">This is a true story. 
        The letters are send to a city named Tomteboda where a lot of people, I call them Santas helper,
        are sitting and answer all the christmas letter.</string>
    
    <string name="truth_second_story">This is not a true story.</string>
    
    <string name="truth_third_story">This is a true story. If you like to know, how it works, check out
        my article.
        "https://sites.google.com/site/barbarahohensee/test-lab/free-dog-gps-tracking"</string>
    
    <string name="xmas_postbox">Xmas Postbox</string>
    <string name="maja">My Dog Maja with a dog bag</string>
    <string name="tracking">Map that shows how to track my dog with an old Android phone</string>
    
    <string name="truefalse">Did you make up your mind, which story tells the truth and which one is not?
        Turn your phone into landscape postition to read the Thruth.</string>  

</resources>
