<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#a4c639"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textSize="22sp" 
            android:textStyle="bold"
            android:textColor="#ae0c00"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="@string/description"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="false"
            android:text="@string/title_first_story"
            android:textSize="16sp"
            android:textStyle="bold" 
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/xmas_postbox"
            android:src="@drawable/julpost" 
            android:layout_marginTop="8dp"/>
      
 <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="false"
            android:text="@string/text_first_story"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/> 
        
   <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="false"
            android:text="@string/title_second_story"
            android:textSize="16sp"
            android:textStyle="bold" 
            android:layout_marginTop="8dp"/>
   
    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/maja"
            android:src="@drawable/maja" 
            android:layout_marginTop="8dp"/>
    
    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="false"
            android:text="@string/text_second_story"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/> 
            
    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="false"
            android:text="@string/title_third_story"
            android:textSize="16sp"
            android:textStyle="bold" 
            android:layout_marginTop="8dp"/>  
      <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tracking"
            android:src="@drawable/tracking" 
            android:layout_marginTop="8dp"/>      
            
       <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="false"
            android:text="@string/text_third_story"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/> 
            
     <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="false"
            android:text="@string/truefalse"
            android:textSize="16sp"
            android:textStyle="bold" 
            android:layout_marginTop="8dp"/>    
    

    </RelativeLayout>

</ScrollView>
